textwire/testdata/good/before/reserve-inside-comp/index.tw
@use('layout')@insert('title', 'Hello World')