textwire/testdata/bad/duplicate-use/index.tw
@use('layout1')
@use('layout2')